--- a/themes/skulsky/layouts/partials/header.html
+++ b/themes/skulsky/layouts/partials/header.html
@@ -7,7 +7,7 @@
 		<ul>
 			<li class="{{ if or (eq .Section "stories") (eq .Title "Stories") }} active {{ end }}"><a href="/stories" title="Рассказы">Рассказы</a></li>
 			<li class="{{ if or (eq .Section "blog") (eq .Title "Blogs") }} active {{ end }}"><a href="/blog" title="Блог">Блог</a></li>
-			<li class="{{ if eq .Section "various" }} active {{ end }}"><a href="/various" title="Разное">Разное</a></li>
+			<li class="{{ if or (eq .Section "various") (eq .Title "Various") }} active {{ end }}"><a href="/various" title="Разное">Разное</a></li>
 			<li class="last {{ if eq .Section "nachalo" }} active {{ end }}"><a href="/nachalo" title="О себе">О себе</a>
 			</li>
 		</ul>
