--- a/themes/skulsky/layouts/indexes/category.html
+++ b/themes/skulsky/layouts/indexes/category.html
@@ -1,43 +1,14 @@
-<!--
-  This file is used to render a list of all posts that belong to a specific
-  category.
--->
-
-
 {{ partial "head.html" . }}
 
-<body class="theme-base-08">
-  {{ partial "sidebar.html" . }}
-
-  <!--
-    Taken from Lanyon example site.
-
-    Putting everything in the wrap div makes the whole page slide over when the
-    navigation button is pressed.
-
-    The masthead is a special Lanyon class that is above the horizontal line at
-    the top of each page. To me it seemed like a place to put the page title.
-
-    We want the title to be Blog Posts and we want it to be a link to the
-    root of the /posts section of the site.
-
-  -->
-  <div class="wrap">
-    <div class="masthead">
-      <div class="container">
-        <h3 class="masthead-title">
-          <a href="/posts" title="Blog">Blog Posts</a>
-        </h3>
-      </div>
-    </div>
+{{partial "body_before.html" . }}
 
   <!-- Show summary of all posts in a category -->
     <div class="container content">
-      <h1 class="post-title">Recent Posts</h1>
+      <h1 class="post-title">Недавние записи</h1>
         <section id="main">
           <div>
-            <h5><a href="/categories">Full Category Index</a></h5>
-            <h2>Posts in &ldquo;{{ .Title }}&rdquo;</h2>
+            <h5><a href="/categories">Категории</a></h5>
+            <h2>Записи в &ldquo;{{ .Title }}&rdquo;</h2>
             {{ range .Data.Pages }}
             {{ .Render "summary"}}
             {{ end }}
@@ -49,5 +20,4 @@
 
   <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-  <!-- Include footer (ends <body> and <html>) -->
-  {{ partial "footer.html" }}
+{{ partial "body_after.html" . }}
