--- a/themes/skulsky/layouts/partials/head_includes.html
+++ b/themes/skulsky/layouts/partials/head_includes.html
@@ -7,8 +7,9 @@
   (including the homepage) to have the same assets.
 -->
 
-<link rel="stylesheet" href="/css/styles.css" media="screen, projection">
-<link rel="stylesheet" href="/css/syntax.css" media="print">
+<link rel="stylesheet" href="css/theme.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="/css/print.css" media="print">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <link href="/css/paginator3000.css" rel="stylesheet" type="text/css" media="screen, projection" />
