--- a/themes/skulsky/layouts/indexes/taxonomies.html
+++ b/themes/skulsky/layouts/indexes/taxonomies.html
@@ -1,23 +1,6 @@
-<!--
-  This file is used to generate the root file of a Hugo index.
-  In our case this is only the index for categories, so it will render the
-  page baseurl/categories
--->
-
 {{ partial "head.html" . }}
 
-<body class="theme-base-08">
-  {{ partial "sidebar.html" . }}
-
-  <!-- See /layouts/indexes/category.html for explanation of this section -->
-  <div class="wrap">
-    <div class="masthead">
-      <div class="container">
-        <h3 class="masthead-title">
-          <a href="/posts" title="Blog">Blog Posts</a>
-        </h3>
-      </div>
-    </div>
+{{partial "body_before.html" . }}
 
     <!--
       In this section we instruct Hugo to list all the different items in the
@@ -31,11 +14,11 @@
     <div class="container content">
         <section id="main">
           <div>
-            <h1>Archive of Posts, by {{ .Data.Singular }}</h1>
+            <h1>Архив записей за {{ .Data.Singular }}</h1>
             <ul class="category">
               {{ $data := .Data }}
               {{ range $key,$value := .Data.Index.ByCount }}
-              <li><a href="/{{ $data.Plural }}/{{ $value.Name | urlize }}"> {{ $value.Name }} </a> ({{ $value.Count }} entries) </li>
+              <li><a href="/{{ $data.Plural }}/{{ $value.Name | urlize }}"> {{ $value.Name }} </a> ({{ $value.Count }} всего) </li>
               {{ end }}
             </ul>
           </div>
@@ -45,5 +28,4 @@
 
   <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-  <!-- Include footer (ends <body> and <html>) -->
-  {{ partial "footer.html" }}
+{{ partial "body_after.html" . }}
