--- a/themes/skulsky/layouts/partials/head.html
+++ b/themes/skulsky/layouts/partials/head.html
@@ -1,16 +1,13 @@
-<!--
-  This is the actual header for each page of the site except the homepage.
-
-  It simply shows the title of the page and includes the css/fonts found in
-  /layouts/chrome/header.html
--->
-
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <base href="{{ .Site.BaseURL }}">
-    <title> {{ .Title }} </title>
+    <title>{{ if ( not .IsPage ) }} {{if (eq .Section "blog")}}{{ .Site.Data.nodes.blog.title }}{{ end }}{{if (eq .Section "stories")}}{{ .Site.Data.nodes.stories.title }}{{ end }}{{if (eq .Section "various")}}{{ .Site.Data.nodes.various.title }}{{ end }} {{ else }} {{ .Title }} {{ end }}</title>
+	
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="{{ if ( not .IsPage ) }} {{if (eq .Section "blog")}}{{ .Site.Data.nodes.blog.description }}{{ end }}{{if (eq .Section "stories")}}{{ .Site.Data.nodes.stories.description }}{{ end }}{{if (eq .Section "various")}}{{ .Site.Data.nodes.various.description }}{{ end }} {{ else }} {{ .Description }} {{ end }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="canonical" href="{{ .Permalink }}">
     {{ partial "head_includes.html" . }}
 </head>
