--- a/themes/skulsky/layouts/partials/header.html
+++ b/themes/skulsky/layouts/partials/header.html
@@ -1,16 +1,21 @@
 <!-- start header -->
-<div id="header">
-	<h1><a href="{{ .Site.BaseURL }}" class="header">{{ .Site.Title }}</a></h1>
-	<h2>{{ .Site.Params.description }}</h2>
-
-	<div id="menu">
-		<ul>
-			<li class="{{ if or (eq .Section "stories") (eq .Title "Stories") }} active {{ end }}"><a href="/stories" title="Рассказы">Рассказы</a></li>
-			<li class="{{ if or (eq .Section "blog") (eq .Title "Blogs") }} active {{ end }}"><a href="/blog" title="Блог">Блог</a></li>
-			<li class="{{ if or (eq .Section "various") (eq .Title "Various") }} active {{ end }}"><a href="/various" title="Разное">Разное</a></li>
-			<li class="last {{ if eq .Section "nachalo" }} active {{ end }}"><a href="/nachalo" title="О себе">О себе</a>
-			</li>
-		</ul>
-	</div>
-</div>
+		<header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
+		<div class="mdl-layout__header-row portfolio-logo-row">
+		<span class="logo-content">
+		<div class="portfolio-logo"></div>
+		<span class="mdl-layout__title"><a href="{{ .Site.BaseURL }}" class="header">{{ .Site.Title }}</a></span>
+		<span class="mdl-layout__subtitle">{{ if .IsPage }}&laquo;{{ .Title }}&raquo;. {{if (eq .Section "blog")}}{{ .Site.Data.nodes.blog.short }}{{ end }}{{if (eq .Section "stories")}}{{ .Site.Data.nodes.stories.short }}{{ end }}{{ else }}{{ .Site.Params.description }}{{ end }}</span>
+		</span>
+		</div>
+		<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
+		<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+{{ partial "sitelinks.html" . }}
+		</nav>
+		</div>
+		</header>
+		<div class="mdl-layout__drawer mdl-layout--small-screen-only">
+		<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+{{ partial "sitelinks.html" . }}
+		</nav>
+		</div>
 <!-- end header -->
