--- a/themes/skulsky/layouts/partials/head_includes.html
+++ b/themes/skulsky/layouts/partials/head_includes.html
@@ -6,7 +6,7 @@
   homepage of the site is different, but we want every page of the site
   (including the homepage) to have the same assets.
 -->
-
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 <link rel="stylesheet" href="css/theme.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="/css/print.css" media="print">
